ColinFay published a site update

--- a/css.html
+++ b/css.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-04-28" />
+<meta name="date" content="2020-04-29" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -163,8 +163,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="part"><span><b>V Step 4: Strengthen</b></span></li>
 <li class="chapter" data-level="12" data-path="step-secure.html"><a href="step-secure.html"><i class="fa fa-check"></i><b>12</b> Build yourself a safety net</a></li>
 <li class="chapter" data-level="13" data-path="secure.html"><a href="secure.html"><i class="fa fa-check"></i><b>13</b> Version Control</a></li>
+<li class="part"><span><b>VI Step 5: Deploy</b></span></li>
 <li class="chapter" data-level="14" data-path="deploy-golem.html"><a href="deploy-golem.html"><i class="fa fa-check"></i><b>14</b> Deploy your application</a></li>
-<li class="part"><span><b>VI Optimizing</b></span></li>
+<li class="part"><span><b>VII Optimizing</b></span></li>
 <li class="chapter" data-level="15" data-path="when-optimize.html"><a href="when-optimize.html"><i class="fa fa-check"></i><b>15</b> The Need for Optimization</a></li>
 <li class="chapter" data-level="16" data-path="optim-caveat.html"><a href="optim-caveat.html"><i class="fa fa-check"></i><b>16</b> Common Application Caveats</a></li>
 <li class="chapter" data-level="17" data-path="optimizing-shiny-code.html"><a href="optimizing-shiny-code.html"><i class="fa fa-check"></i><b>17</b> Optimizing Shiny Code</a></li>
@@ -263,7 +264,7 @@ As you can see if you have created a <code>fluidPage()</code> before, there is a
 <div id="getting-started-with-css" class="section level2">
 <h2><span class="header-section-number">8.2</span> Getting started with CSS</h2>
 <p>CSS is a descriptive language, meaning that you will have to declare the style either on a tag or inside an external file.
-We will see how to integrate CSS inside your Shiny application in the next section, but before that, let’s start with a short introduction to CSS<a href="#fn28" class="footnote-ref" id="fnref28"><sup>28</sup></a>
+We will see how to integrate CSS inside your Shiny application in the next section, but before that, let’s start with a short introduction to CSS<a href="#fn29" class="footnote-ref" id="fnref29"><sup>29</sup></a>
 .</p>
 <div id="about-css-syntax" class="section level3">
 <h3><span class="header-section-number">8.2.1</span> About CSS syntax</h3>
@@ -281,7 +282,7 @@ Note that each key-value pair must end with a semicolon.</p>
 <h3><span class="header-section-number">8.2.2</span> CSS selectors</h3>
 <p>CSS selectors are a wide topic, as there are many combinations of things you might want to select inside an HTML page.</p>
 <p>The first type of selectors are the “standard” ones <code>name</code>, <code>id</code>, or <code>class</code>.
-These refer to the elements composing an HTML tag: for example, with <code>&lt;h2 id = "tileone" class = "standard"&gt;One&lt;/h2&gt;</code>, the name is <code>h2</code>, the id <code>tileone</code>, and the class <code>standard</code><a href="#fn29" class="footnote-ref" id="fnref29"><sup>29</sup></a>
+These refer to the elements composing an HTML tag: for example, with <code>&lt;h2 id = "tileone" class = "standard"&gt;One&lt;/h2&gt;</code>, the name is <code>h2</code>, the id <code>tileone</code>, and the class <code>standard</code><a href="#fn30" class="footnote-ref" id="fnref30"><sup>30</sup></a>
 .</p>
 <p>To select these three elements in CSS:</p>
 <ul>
@@ -432,9 +433,9 @@ Here are some:</p>
 </div>
 <div class="footnotes">
 <hr />
-<ol start="28">
-<li id="fn28"><p>Of course, this part will not make you an expert CSS programmer, but we hope you will get an idea of how it works, enough to get you started and want to learn more!<a href="css.html#fnref28" class="footnote-back">↩︎</a></p></li>
-<li id="fn29"><p>Note that in HTML, id must be unique, but class must not.<a href="css.html#fnref29" class="footnote-back">↩︎</a></p></li>
+<ol start="29">
+<li id="fn29"><p>Of course, this part will not make you an expert CSS programmer, but we hope you will get an idea of how it works, enough to get you started and want to learn more!<a href="css.html#fnref29" class="footnote-back">↩︎</a></p></li>
+<li id="fn30"><p>Note that in HTML, id must be unique, but class must not.<a href="css.html#fnref30" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
 <hr/>
