--- a/step-design.html
+++ b/step-design.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-04-28" />
+<meta name="date" content="2020-04-29" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -163,8 +163,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="part"><span><b>V Step 4: Strengthen</b></span></li>
 <li class="chapter" data-level="12" data-path="step-secure.html"><a href="step-secure.html"><i class="fa fa-check"></i><b>12</b> Build yourself a safety net</a></li>
 <li class="chapter" data-level="13" data-path="secure.html"><a href="secure.html"><i class="fa fa-check"></i><b>13</b> Version Control</a></li>
+<li class="part"><span><b>VI Step 5: Deploy</b></span></li>
 <li class="chapter" data-level="14" data-path="deploy-golem.html"><a href="deploy-golem.html"><i class="fa fa-check"></i><b>14</b> Deploy your application</a></li>
-<li class="part"><span><b>VI Optimizing</b></span></li>
+<li class="part"><span><b>VII Optimizing</b></span></li>
 <li class="chapter" data-level="15" data-path="when-optimize.html"><a href="when-optimize.html"><i class="fa fa-check"></i><b>15</b> The Need for Optimization</a></li>
 <li class="chapter" data-level="16" data-path="optim-caveat.html"><a href="optim-caveat.html"><i class="fa fa-check"></i><b>16</b> Common Application Caveats</a></li>
 <li class="chapter" data-level="17" data-path="optimizing-shiny-code.html"><a href="optimizing-shiny-code.html"><i class="fa fa-check"></i><b>17</b> Optimizing Shiny Code</a></li>
@@ -215,7 +216,7 @@ And what about “Oh I wish I had realized sooner that this package existed befo
 Same thing: we’re jumping straight into solving programming problem when someone else has open-sourced a solution to this very same problem.</p>
 <p>Of course, implementing your own solution might be a good thing in specific cases: avoiding heavy dependencies, incompatible licensing, the joy of intellectual challenge…
 But when building production software, it is safer to go for an existing solution if it exists and fits in the project: existing packages/software that are widely used by the community and by the industry benefit from wider testing, wider documentation, and a larger audience if you need to ask questions.
-And of course, it saves time, be it immediately or in the long run: re-using an existing solution allows you to save time re-implementing it, so you save time today, but it also prevent you from having to detect and correct bugs, saving you time tomorrow<a href="#fn26" class="footnote-ref" id="fnref26"><sup>26</sup></a>
+And of course, it saves time, be it immediately or in the long run: re-using an existing solution allows you to save time re-implementing it, so you save time today, but it also prevent you from having to detect and correct bugs, saving you time tomorrow<a href="#fn27" class="footnote-ref" id="fnref27"><sup>27</sup></a>
 .</p>
 <p>So, before rushing into coding, take some time to conceptualize your application / module on a piece of paper.
 That will help you get the big picture for the piece of code you will be writing: what are the inputs, what are the outputs, what packages / services you can use inside your application, how it will fit in the rest of the project.</p>
@@ -285,7 +286,7 @@ On what machines, and in what context?<br />
 Will they be using the app in their office, on their phone while driving a tractor, in a plant while wearing lab coats?</p>
 <p>That might seems like weird questions if you are just focusing on the very technical side of the app implementation, but think about where the app will be used: the application used while driving agricultural machines might need less interactive things, bigger fonts, simpler interface, less details and more direct information.
 If you are building a Shiny app for a team of sellers who are always on the road, chances are they will need an app that they can browse from their mobile.
-And developing for mobiles requires a different kind of mindset<a href="#fn27" class="footnote-ref" id="fnref27"><sup>27</sup></a>
+And developing for mobiles requires a different kind of mindset<a href="#fn28" class="footnote-ref" id="fnref28"><sup>28</sup></a>
 .</p>
 <p>Another good reason why talking to the users is an important step is that most of the time, people writing specifications are not the end users and will ask either too much features or not enough.
 Do the users really need that much interactive plots?
@@ -354,9 +355,9 @@ That way, even if the process of getting permission to write on the company data
 </div>
 <div class="footnotes">
 <hr />
-<ol start="26">
-<li id="fn26"><p>Of course, it is not an absolute rule: you might also inherit from the bug created by the open source solution.<a href="step-design.html#fnref26" class="footnote-back">↩︎</a></p></li>
-<li id="fn27"><p>For developing an app that is mobile first, you can have a look at the great <code>{shinyMobile}</code> <span class="citation">(Granjon, Perrier, and Rudolf <a href="#ref-R-shinyMobile" role="doc-biblioref">2019</a>)</span> package, made by the amazing Rinterface team.<a href="step-design.html#fnref27" class="footnote-back">↩︎</a></p></li>
+<ol start="27">
+<li id="fn27"><p>Of course, it is not an absolute rule: you might also inherit from the bug created by the open source solution.<a href="step-design.html#fnref27" class="footnote-back">↩︎</a></p></li>
+<li id="fn28"><p>For developing an app that is mobile first, you can have a look at the great <code>{shinyMobile}</code> <span class="citation">(Granjon, Perrier, and Rudolf <a href="#ref-R-shinyMobile" role="doc-biblioref">2019</a>)</span> package, made by the amazing Rinterface team.<a href="step-design.html#fnref28" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
 <hr/>
