--- a/workflow.html
+++ b/workflow.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-04-28" />
+<meta name="date" content="2020-04-29" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -163,8 +163,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="part"><span><b>V Step 4: Strengthen</b></span></li>
 <li class="chapter" data-level="12" data-path="step-secure.html"><a href="step-secure.html"><i class="fa fa-check"></i><b>12</b> Build yourself a safety net</a></li>
 <li class="chapter" data-level="13" data-path="secure.html"><a href="secure.html"><i class="fa fa-check"></i><b>13</b> Version Control</a></li>
+<li class="part"><span><b>VI Step 5: Deploy</b></span></li>
 <li class="chapter" data-level="14" data-path="deploy-golem.html"><a href="deploy-golem.html"><i class="fa fa-check"></i><b>14</b> Deploy your application</a></li>
-<li class="part"><span><b>VI Optimizing</b></span></li>
+<li class="part"><span><b>VII Optimizing</b></span></li>
 <li class="chapter" data-level="15" data-path="when-optimize.html"><a href="when-optimize.html"><i class="fa fa-check"></i><b>15</b> The Need for Optimization</a></li>
 <li class="chapter" data-level="16" data-path="optim-caveat.html"><a href="optim-caveat.html"><i class="fa fa-check"></i><b>16</b> Common Application Caveats</a></li>
 <li class="chapter" data-level="17" data-path="optimizing-shiny-code.html"><a href="optimizing-shiny-code.html"><i class="fa fa-check"></i><b>17</b> Optimizing Shiny Code</a></li>
@@ -193,42 +194,85 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="workflow" class="section level1">
 <h1><span class="header-section-number">Chapter 5</span> The workflow</h1>
 <p>Building a robust, production-ready web application will be made easier by following a given workflow.
-The one we are advocating for is divided in five steps: Design, Prototype, Build, Strenghten and Deploy.
-In this section, we will give an overview of the different steps of this workflow: the rest of the book will cover in more depth each of these steps.</p>
+The one we are advocating for is divided in five steps:</p>
+<ul>
+<li>Design</li>
+<li>Prototype</li>
+<li>Build</li>
+<li>Strengthen</li>
+<li>Deploy</li>
+</ul>
+<p>In this chapter, we will give an brief overview of the different steps of this workflow: the rest of the book will cover in more depth each of these steps.</p>
+<p>Of course, as with any workflow, this one is not a one-size-fits-all solution: all projects are unique, with technical requirements, specific planning and team of coder(s).
+But we think that following this workflow will help you get good habits when it comes to structuring your application project, even more if you know from day one that the application you are going to work on is a large application, be it in term of code base, complexity, or time.</p>
 <div id="part-1-design" class="section level2">
 <h2><span class="header-section-number">5.1</span> Part 1: Design</h2>
-<p>The first part of the workflow is the <strong>design</strong> part.
-This first step of the process is the one that happens, before actually writing any line of code.</p>
-<p>This first step is not Shiny nor R specific, but something software engineers do for any software or web application: discuss with the clients, the end-users, and the developers who will work on the project.</p>
-<p>During the process of designing, you will define how the application will be build: somewhere between users’ dreams, what is technically possible, and the time you have to build the application.</p>
+<p>The first part of the workflow is the <strong>design</strong> part.</p>
+<p>This very first step is the one that happens before starting to code: it is the one where you are thinking about the general implementation and features of the application, and where you build the general roadmap for the coding process.
+During the process of designing, you will define how the application will be build: somewhere between users’ dreams, what is technically possible, and the time you have to build the application.</p>
+<p>This first step is not Shiny, nor R specific, it is something software engineers do for any software or web application: discuss with the clients<a href="#fn19" class="footnote-ref" id="fnref19"><sup>19</sup></a>
+, the end-users, and the developers who will work on the project.
+The idea with this first step is to get a clear idea of what everybody involved in the project wants/is able to do:</p>
+<ul>
+<li><p>From the client/end-users point of view, this steps involves getting a clear idea of what they want the application to do, and to confront this view with the developers to evaluate what is possible to do, how many time it will take to implement desired features, etc.</p></li>
+<li><p>From the developer team point of view, this steps also involves getting a clear idea of what the client is asking, in other word it involves translating the requirements to technical specifications.
+For example, the client might write something like “Save the plot inside a database so that we can search for them later on”: from an application user point of view, this is a clear feature, from a developer point of view, this requirement can be translated in many ways.</p></li>
+</ul>
+<p>This first step actually implies a lot of thinking before coding.
+The main goal of this step is to spend time thinking about the application while you still do not have anything implemented, so that you do not discover blocking elements once it is too late, or at least once you already have written a lot of code.
+We have all been in a situation during a project where we tell ourselves: “I wish I had know this sooner”: working on designing the application before building it helps lowering the chances for this kind of bad surprises.</p>
+<p>This first part of the workflow will span over three chapters:</p>
+<ul>
+<li><p>UX Matters, a chapter where we introduce to the concepts of User Experience, and why it is a crucial concept when you are building your application.
+This chapter will cover the importance of simplicity when creating web applications, the danger of trying to implement too much components (aka “feature creep”), and finally we will introduce some general rules about Web Accessibility.
+These topics are vast topics, and a lot of literature and online resources exists for all these subjects: further readings and resources are linked inside each section.</p></li>
+<li><p>Don’t rush into coding underlines why “coding first” might not be the best strategy when it comes to building a production application.
+We will also quickly introduce concept maps, and list some of the common questions you might want to ask the people involved in the project.</p></li>
+<li><p>Finally, this first part of the workflow covers a gentle introduction to CSS, which might be a crucial skill to master when it comes to send an application to production: either your clients already have a CSS that they want to include in the application, or they want their application to have the color and design that match the one from the company.
+Also, when building a professional application, chances are that you will want your app to stand out from the crowd: hence a little bit of CSS.
+This part is included in the design part because it is something that you might want to think about from the very beginning: for example, some company have pre-existing <code>{shiny}</code> templates, they might want to include specific fonts, logo, icons…
+These are things better known before starting to code: it is easier to start working inside a <code>{shiny}</code> template than migrating an existing code to a template.</p></li>
+</ul>
 </div>
 <div id="part-2-prototype" class="section level2">
 <h2><span class="header-section-number">5.2</span> Part 2: Prototype</h2>
 <p>The <em>Prototype</em> part is the one during which you will build the front-end and the back-end, but separately.</p>
-<p>As you may know, a Shiny application is an interface (the front-end) used to communicate information to the end-users that are computed on the server side (the back-end).</p>
-<p>To start on solid ground, you need to build the two (front and back) seperately:</p>
+<p>As you may know, a Shiny application is an interface (the front-end, or “UI”) used to communicate information to the end-users that are computed on the server side (the back-end, or “server”).</p>
+<p>To start on solid ground, you need to build the two (front and back) separately:</p>
+<p>On one hand, work on the general appearance, without working on any actual algorithmic implementation: position of the inputs and outputs, general design, interactions…. everything that does not rely on computation on the back end.
+This “UI first” approach will be made possible for Shiny with notably one package, <code>{shinipsum}</code> <span class="citation">(Fay and Rochette <a href="#ref-R-shinipsum" role="doc-biblioref">2020</a><a href="#ref-R-shinipsum" role="doc-biblioref">b</a>)</span>.</p>
+<p>On the other hand, you (or someone from your team), will be working on building the back-end logic, which are the actual outputs that are going to be displayed, the algorithm that will compute results, and all the elements that do not need an interactive runtime to work.
+For this point, you can use what we call a “Rmd-first” approach, by combining R functions with the writing of Vignettes that describes the internal of the application.
+This part of the workflow will be developed in two chapters:</p>
 <ul>
-<li><p>On one hand, work on the general appearance, without working on any actual algorithmic implementation: position of the inputs and outputs, general design, interactions…. everything that does not rely on computation on the back end.
-This “UI first” approach will be made possible for Shiny with notably one package, <code>{shinipsum}</code> <span class="citation">(Fay and Rochette <a href="#ref-R-shinipsum" role="doc-biblioref">2020</a><a href="#ref-R-shinipsum" role="doc-biblioref">b</a>)</span>, and tools like basic CSS, and some <code>{golem}</code> <span class="citation">(Guyader et al. <a href="#ref-R-golem" role="doc-biblioref">2020</a>)</span> functions.</p></li>
-<li><p>On the other hand, you (or someone from your team), will be working on building the back-end logic, which are the actual outputs that are going to be displayed, the algorithm that will compute results, and all the elements that do not need an interactive runtime to work.
-For this point, you can use what we call a “Rmd-first” approach, by combining R functions with the writing of Vignettes that describes the internal of the application.</p></li>
+<li><p>The <em>Setting up for success with <code>{golem}</code></em> chapter will cover the basics of getting started with the <code>{golem}</code> package so that you can start your prototyped application with solid foundation.</p></li>
+<li><p>The <em>Building an “ipsum-app”</em> chapter will cover the importance of prototyping when it comes to building applications, then present <code>{shinipsum}</code> and <code>{fakir}</code>, and finally will introduce how you can use the “Rmd First” methodology to prototype your application back-end.</p></li>
 </ul>
 </div>
 <div id="part-3-build" class="section level2">
 <h2><span class="header-section-number">5.3</span> Part 3: Build</h2>
 <p>The <em>Build</em> part is the one where you will combine the business (or back-end) logic with the front-end.
 In this third part, you will work on the core engine of the application, making the business logic work inside the interactive logic of your application.</p>
+<p>This step of the workflow is cover in the <em>Building app with <code>{golem}</code></em>, a chapter that presents the various functions you can use to build your application, <em>i.e</em> the one you will be using to combine your back-end and front-end.</p>
 </div>
 <div id="part-4-strengthen" class="section level2">
 <h2><span class="header-section-number">5.4</span> Part 4: Strengthen</h2>
 <p><em>Strengthening</em> your app is ensuring your application is immortal, in the sense that we defined in the first chapter of this book.</p>
 <p>In this part, we will go through unit tests, reproducible development environment, version control and continuous integration in the context of Shiny applications.</p>
+<p>This step of the workflow will span over two chapters.</p>
+<ul>
+<li><p>The first one, <em>Build yourself a safety net</em>, details how to build a testing environment for your Shiny Application, be it for testing the back-end or the front-end.
+In this chapter, you will be introduced to <code>{testthat}</code> for testing your application back-end, tools that are more linked to testing the front-end like NodeJS <code>puppeteer</code> module, <code>{shinytest}</code> and <code>{crrry}</code> for testing interactive logic, <code>{shinyloadtest}</code> and <code>{dockerstats}</code> for testing your application load.
+This chapter will also cover <code>{renv}</code> and <code>Docker</code>, two essential tools for developing in a reproducible environment.</p></li>
+<li><p>In the <em>Version Control</em> chapter, you will be introduced to <code>git</code> and to automated test using Continous Integration platforms like Travis CI or GitHub Actions.</p></li>
+</ul>
 </div>
 <div id="part-5-deploy" class="section level2">
 <h2><span class="header-section-number">5.5</span> Part 5: Deploy</h2>
 <p>To <em>Deploy</em> is to send your application into production once it is built.</p>
 <p>Being exhaustive here would be an impossible task: there are countless ways to make your application accessible to its targeted users, but we will try to cover some basics about this part.</p>
 <p>In this part, we will quickly present a series of methods to deploy your application on various environments, notably sharing your application as a package, sending it to an RStudio platform, or building a Docker image to serve your app on a cloud provider.</p>
+<p>This step of the workflow is covered in the <em>Deploy your application</em> chapter.</p>
 
 </div>
 </div>
@@ -240,9 +284,12 @@ In this third part, you will work on the core engine of the application, making 
 <div id="ref-R-shinipsum">
 <p>Fay, Colin, and Sebastien Rochette. 2020b. <em>Shinipsum: Lorem-Ipsum-Like Helpers for Fast Shiny Prototyping</em>. <a href="https://github.com/Thinkr-open/shinipsum">https://github.com/Thinkr-open/shinipsum</a>.</p>
 </div>
-<div id="ref-R-golem">
-<p>Guyader, Vincent, Colin Fay, Sébastien Rochette, and Cervan Girard. 2020. <em>Golem: A Framework for Robust Shiny Applications</em>. <a href="https://github.com/ThinkR-open/golem">https://github.com/ThinkR-open/golem</a>.</p>
 </div>
+<div class="footnotes">
+<hr />
+<ol start="19">
+<li id="fn19"><p>We use the term “client” in a lose sense, meaning the person(s) who is/are ordering the application.<a href="workflow.html#fnref19" class="footnote-back">↩︎</a></p></li>
+</ol>
 </div>
 <hr/>
 <footer>
