ColinFay published a site update

--- a/wip/structure.html
+++ b/wip/structure.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-05-01" />
+<meta name="date" content="2020-05-04" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -792,7 +792,7 @@ As UI and server are functions, you can set parameters that will be used to conf
 
 &lt;button id=&quot;mod_ui_2-validate&quot; type=&quot;button&quot; class=&quot;btn btn-default action-button&quot;&gt;Validate Choice, again&lt;/button&gt;</code></pre>
 <p>The <strong>app_server</strong> side contains a series of <code>callModule(mod_server, unique_id, ...)</code>, also allowing additional parameters, just like any other function.</p>
-<p>As a live example, we can have a look at <a href="https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L17">mod_dataviz.R</a> from the <code>{tidytuesday201942}</code> <span class="citation">(Fay <a href="#ref-R-tidytuesday201942" role="doc-biblioref">2020</a><a href="#ref-R-tidytuesday201942" role="doc-biblioref">j</a>)</span> Shiny application, available at <a href="https://connect.thinkr.fr/tidytuesday201942/" class="uri">https://connect.thinkr.fr/tidytuesday201942/</a>.</p>
+<p>As a live example, we can have a look at <a href="https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L17">mod_dataviz.R</a> from the <code>{tidytuesday201942}</code> <span class="citation">(Fay <a href="#ref-R-tidytuesday201942" role="doc-biblioref">2020</a><a href="#ref-R-tidytuesday201942" role="doc-biblioref">k</a>)</span> Shiny application, available at <a href="https://connect.thinkr.fr/tidytuesday201942/" class="uri">https://connect.thinkr.fr/tidytuesday201942/</a>.</p>
 <p>This application contains 6 tabs, 4 of them being pretty much alike: a side bar with inputs, a main panel with a button, and the plot.
 This is a typical case where you should reuse modules: if two or more parts are relatively similar, it is easier to bundle it inside a reusable module, and condition the ui/server with function arguments.</p>
 
@@ -997,7 +997,7 @@ For example:</p>
 <p>Similarly to the “stratégie du petit r”, we can create an R6 object, which is passed along inside the modules.
 As this R6 object is not a reactive object and is not meant to be used as such, this reduces uncontrolled reactivity of the application, thus reduces the complexity of handling chain reactions across modules.
 Of course, you need to have another special tool in your app to trigger elements.
-All this will be explained in details in chapter <a href="optim-caveat.html#optim-caveat">Reactivity anti-patterns</a> of this book, and you can find an example of this pattern inside the <a href="https://github.com/ColinFay/hexmake/blob/master/R/R6.R"><code>{hexmake}</code></a> <span class="citation">(Fay <a href="#ref-R-hexmake" role="doc-biblioref">2020</a><a href="#ref-R-hexmake" role="doc-biblioref">f</a>)</span> application.</p>
+All this will be explained in details in chapter <a href="optim-caveat.html#optim-caveat">Reactivity anti-patterns</a> of this book, and you can find an example of this pattern inside the <a href="https://github.com/ColinFay/hexmake/blob/master/R/R6.R"><code>{hexmake}</code></a> <span class="citation">(Fay <a href="#ref-R-hexmake" role="doc-biblioref">2020</a><a href="#ref-R-hexmake" role="doc-biblioref">g</a>)</span> application.</p>
 </div>
 </div>
 </div>
@@ -1113,8 +1113,14 @@ In an <code>app.R</code> file containing thousands of lines, it is very hard to 
 <p>Splitting files is good.
 Splitting files using a defined convention is better.
 Why?
-Because using a common convention for your files helps the other developers (and potentially you) to know exactly what is contained in a specific file.
-Using a convention allows everyone to know where to look when debugging and implementing new features.
+Because using a common convention for your files helps the other developers (and potentially you) to know exactly what is contained in a specific file, making it easier to navigate through the codebase, be it for new-comers or for developers already familiar with the software.</p>
+<p>As developed in “Refactoring at Scale” <span class="citation">(Lemaire <a href="#ref-lemaire2020" role="doc-biblioref">2020</a>)</span>, lacking a defined file structure when it comes to codebase leads to a slower productivity on the long run, notably when new engineers join the team: engineers with a knowledge of the file structure have learned how to navigate through the codebase, but new comers will find it hard to understand how everything is organized.
+And of course, on the long run, even developers with a knowledge of the structure can get lost, even more if getting back to a project that they have not</p>
+<blockquote>
+<p>Because it’s easier to maintain the status quo, instead of proactively beginning to organize related files […], engineers instead learn to navigate the increasingly sprawling code. New engineers introduced to the growing chaos raise a warning flag and encourage the team to begin splitting up the code, but these concerns fall to deaf ears […].
+Eventually, the codebase reaches a critical mass where the persistent lack of organization has dramatically slowed productivity across the engineering team. Only then does the team take the time to draft a plan for grooming the codebase, at which point the number of variables to consider is far greater than had they made a concerted effort to tackle the problem months (or even years) earlier.</p>
+</blockquote>
+<p>Using a convention allows everyone to know where to look when debugging, refactoring, or implementing new features.
 For example, if you follow <code>{golem}</code>’s convention (which is the one developed in this section), you will know immediately that a file starting with <code>mod_</code> contains a module.
 If you take over a project, look in the <code>R/</code> folder, and see files starting with these three letters, you will know immediately that these files contain modules.</p>
 <p>Here is our proposition for a convention defining how to split your application into smaller pieces.</p>
@@ -1154,13 +1160,16 @@ But be it one or thousands of files, it is always a good practice to stick to a 
 <p>Chang, Winston, Joe Cheng, JJ Allaire, Yihui Xie, and Jonathan McPherson. 2020. <em>Shiny: Web Application Framework for R</em>. <a href="https://CRAN.R-project.org/package=shiny">https://CRAN.R-project.org/package=shiny</a>.</p>
 </div>
 <div id="ref-R-hexmake">
-<p>Fay, Colin. 2020f. <em>Hexmake: Hex Stickers Maker</em>. <a href="https://github.com/colinfay/hexmake">https://github.com/colinfay/hexmake</a>.</p>
+<p>Fay, Colin. 2020g. <em>Hexmake: Hex Stickers Maker</em>. <a href="https://github.com/colinfay/hexmake">https://github.com/colinfay/hexmake</a>.</p>
 </div>
 <div id="ref-R-tidytuesday201942">
-<p>Fay, Colin. 2020j. <em>Tidytuesday201942: A Golem App for Tidy Tuesday</em>. <a href="http://www.github.com/ColinFay/tidytuesday201942">http://www.github.com/ColinFay/tidytuesday201942</a>.</p>
+<p>Fay, Colin. 2020k. <em>Tidytuesday201942: A Golem App for Tidy Tuesday</em>. <a href="http://www.github.com/ColinFay/tidytuesday201942">http://www.github.com/ColinFay/tidytuesday201942</a>.</p>
 </div>
 <div id="ref-R-golem">
 <p>Guyader, Vincent, Colin Fay, Sébastien Rochette, and Cervan Girard. 2020. <em>Golem: A Framework for Robust Shiny Applications</em>. <a href="https://github.com/ThinkR-open/golem">https://github.com/ThinkR-open/golem</a>.</p>
+</div>
+<div id="ref-lemaire2020">
+<p>Lemaire, Maude. 2020. <em>Refactoring at Scale</em>. Henry Holt. <a href="https://learning.oreilly.com/library/view/refactoring-at-scale/9781492075523/">https://learning.oreilly.com/library/view/refactoring-at-scale/9781492075523/</a>.</p>
 </div>
 <div id="ref-ericraymond2003">
 <p>Raymond, Eric S. 2003. <em>The Art of Unix Programming (the Addison-Wesley Professional Computng Series)</em>. Addison-Wesley.</p>
