ColinFay published a site update

--- a/wip/structure.html
+++ b/wip/structure.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-05-07" />
+<meta name="date" content="2020-05-11" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -413,11 +413,12 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="18.4" data-path="optimjs.html"><a href="optimjs.html#about-golem-js-functions"><i class="fa fa-check"></i><b>18.4</b> About <code>{golem}</code> js functions</a><ul>
 <li class="chapter" data-level="18.4.1" data-path="optimjs.html"><a href="optimjs.html#goleminvoke_js"><i class="fa fa-check"></i><b>18.4.1</b> <code>golem::invoke_js()</code></a></li>
 </ul></li>
-<li class="chapter" data-level="18.5" data-path="optimjs.html"><a href="optimjs.html#learn-more-about-javascript"><i class="fa fa-check"></i><b>18.5</b> Learn more about JavaScript</a><ul>
-<li class="chapter" data-level="18.5.1" data-path="optimjs.html"><a href="optimjs.html#shiny-javascript"><i class="fa fa-check"></i><b>18.5.1</b> Shiny &amp; JavaScript</a></li>
-<li class="chapter" data-level="18.5.2" data-path="optimjs.html"><a href="optimjs.html#javascript-basics"><i class="fa fa-check"></i><b>18.5.2</b> JavaScript basics</a></li>
-<li class="chapter" data-level="18.5.3" data-path="optimjs.html"><a href="optimjs.html#jquery"><i class="fa fa-check"></i><b>18.5.3</b> jQuery</a></li>
-<li class="chapter" data-level="18.5.4" data-path="optimjs.html"><a href="optimjs.html#intermediate-advanced-javascript"><i class="fa fa-check"></i><b>18.5.4</b> Intermediate / advanced JavaScript</a></li>
+<li class="chapter" data-level="18.5" data-path="optimjs.html"><a href="optimjs.html#one-last-thing-api-calls"><i class="fa fa-check"></i><b>18.5</b> One Last Thing: API calls</a></li>
+<li class="chapter" data-level="18.6" data-path="optimjs.html"><a href="optimjs.html#learn-more-about-javascript"><i class="fa fa-check"></i><b>18.6</b> Learn more about JavaScript</a><ul>
+<li class="chapter" data-level="18.6.1" data-path="optimjs.html"><a href="optimjs.html#shiny-javascript"><i class="fa fa-check"></i><b>18.6.1</b> Shiny &amp; JavaScript</a></li>
+<li class="chapter" data-level="18.6.2" data-path="optimjs.html"><a href="optimjs.html#javascript-basics"><i class="fa fa-check"></i><b>18.6.2</b> JavaScript basics</a></li>
+<li class="chapter" data-level="18.6.3" data-path="optimjs.html"><a href="optimjs.html#jquery"><i class="fa fa-check"></i><b>18.6.3</b> jQuery</a></li>
+<li class="chapter" data-level="18.6.4" data-path="optimjs.html"><a href="optimjs.html#intermediate-advanced-javascript"><i class="fa fa-check"></i><b>18.6.4</b> Intermediate / advanced JavaScript</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
@@ -792,7 +793,7 @@ As UI and server are functions, you can set parameters that will be used to conf
 
 &lt;button id=&quot;mod_ui_2-validate&quot; type=&quot;button&quot; class=&quot;btn btn-default action-button&quot;&gt;Validate Choice, again&lt;/button&gt;</code></pre>
 <p>The <strong>app_server</strong> side contains a series of <code>callModule(mod_server, unique_id, ...)</code>, also allowing additional parameters, just like any other function.</p>
-<p>As a live example, we can have a look at <a href="https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L17">mod_dataviz.R</a> from the <code>{tidytuesday201942}</code> <span class="citation">(Fay <a href="#ref-R-tidytuesday201942" role="doc-biblioref">2020</a><a href="#ref-R-tidytuesday201942" role="doc-biblioref">k</a>)</span> Shiny application, available at <a href="https://connect.thinkr.fr/tidytuesday201942/" class="uri">https://connect.thinkr.fr/tidytuesday201942/</a>.</p>
+<p>As a live example, we can have a look at <a href="https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L17">mod_dataviz.R</a> from the <code>{tidytuesday201942}</code> <span class="citation">(Fay <a href="#ref-R-tidytuesday201942" role="doc-biblioref">2020</a><a href="#ref-R-tidytuesday201942" role="doc-biblioref">l</a>)</span> Shiny application, available at <a href="https://connect.thinkr.fr/tidytuesday201942/" class="uri">https://connect.thinkr.fr/tidytuesday201942/</a>.</p>
 <p>This application contains 6 tabs, 4 of them being pretty much alike: a side bar with inputs, a main panel with a button, and the plot.
 This is a typical case where you should reuse modules: if two or more parts are relatively similar, it is easier to bundle it inside a reusable module, and condition the ui/server with function arguments.</p>
 
@@ -1163,7 +1164,7 @@ But be it one or thousands of files, it is always a good practice to stick to a 
 <p>Fay, Colin. 2020g. <em>Hexmake: Hex Stickers Maker</em>. <a href="https://github.com/colinfay/hexmake">https://github.com/colinfay/hexmake</a>.</p>
 </div>
 <div id="ref-R-tidytuesday201942">
-<p>Fay, Colin. 2020k. <em>Tidytuesday201942: A Golem App for Tidy Tuesday</em>. <a href="http://www.github.com/ColinFay/tidytuesday201942">http://www.github.com/ColinFay/tidytuesday201942</a>.</p>
+<p>Fay, Colin. 2020l. <em>Tidytuesday201942: A Golem App for Tidy Tuesday</em>. <a href="http://www.github.com/ColinFay/tidytuesday201942">http://www.github.com/ColinFay/tidytuesday201942</a>.</p>
 </div>
 <div id="ref-R-golem">
 <p>Guyader, Vincent, Colin Fay, Sébastien Rochette, and Cervan Girard. 2020. <em>Golem: A Framework for Robust Shiny Applications</em>. <a href="https://github.com/ThinkR-open/golem">https://github.com/ThinkR-open/golem</a>.</p>
