--- a/wip/matters.html
+++ b/wip/matters.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-05-07" />
+<meta name="date" content="2020-05-11" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -413,11 +413,12 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="18.4" data-path="optimjs.html"><a href="optimjs.html#about-golem-js-functions"><i class="fa fa-check"></i><b>18.4</b> About <code>{golem}</code> js functions</a><ul>
 <li class="chapter" data-level="18.4.1" data-path="optimjs.html"><a href="optimjs.html#goleminvoke_js"><i class="fa fa-check"></i><b>18.4.1</b> <code>golem::invoke_js()</code></a></li>
 </ul></li>
-<li class="chapter" data-level="18.5" data-path="optimjs.html"><a href="optimjs.html#learn-more-about-javascript"><i class="fa fa-check"></i><b>18.5</b> Learn more about JavaScript</a><ul>
-<li class="chapter" data-level="18.5.1" data-path="optimjs.html"><a href="optimjs.html#shiny-javascript"><i class="fa fa-check"></i><b>18.5.1</b> Shiny &amp; JavaScript</a></li>
-<li class="chapter" data-level="18.5.2" data-path="optimjs.html"><a href="optimjs.html#javascript-basics"><i class="fa fa-check"></i><b>18.5.2</b> JavaScript basics</a></li>
-<li class="chapter" data-level="18.5.3" data-path="optimjs.html"><a href="optimjs.html#jquery"><i class="fa fa-check"></i><b>18.5.3</b> jQuery</a></li>
-<li class="chapter" data-level="18.5.4" data-path="optimjs.html"><a href="optimjs.html#intermediate-advanced-javascript"><i class="fa fa-check"></i><b>18.5.4</b> Intermediate / advanced JavaScript</a></li>
+<li class="chapter" data-level="18.5" data-path="optimjs.html"><a href="optimjs.html#one-last-thing-api-calls"><i class="fa fa-check"></i><b>18.5</b> One Last Thing: API calls</a></li>
+<li class="chapter" data-level="18.6" data-path="optimjs.html"><a href="optimjs.html#learn-more-about-javascript"><i class="fa fa-check"></i><b>18.6</b> Learn more about JavaScript</a><ul>
+<li class="chapter" data-level="18.6.1" data-path="optimjs.html"><a href="optimjs.html#shiny-javascript"><i class="fa fa-check"></i><b>18.6.1</b> Shiny &amp; JavaScript</a></li>
+<li class="chapter" data-level="18.6.2" data-path="optimjs.html"><a href="optimjs.html#javascript-basics"><i class="fa fa-check"></i><b>18.6.2</b> JavaScript basics</a></li>
+<li class="chapter" data-level="18.6.3" data-path="optimjs.html"><a href="optimjs.html#jquery"><i class="fa fa-check"></i><b>18.6.3</b> jQuery</a></li>
+<li class="chapter" data-level="18.6.4" data-path="optimjs.html"><a href="optimjs.html#intermediate-advanced-javascript"><i class="fa fa-check"></i><b>18.6.4</b> Intermediate / advanced JavaScript</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
@@ -593,7 +594,7 @@ What is the difference between the two?</p>
 </ul>
 <p>So the first is that the app is designed in such a way that there is no learning curve to using it.
 A self-explanatory app has a small learning curve, but it is designed in a way that will make the user understand it in a matter of seconds.</p>
-<p>Let’s for example get back to our <code>{tidytuesday201942}</code> <span class="citation">(Fay <a href="#ref-R-tidytuesday201942" role="doc-biblioref">2020</a><a href="#ref-R-tidytuesday201942" role="doc-biblioref">k</a>)</span> application available at <a href="https://connect.thinkr.fr/tidytuesday201942/">connect.thinkr.fr/tidytuesday201942</a>
+<p>Let’s for example get back to our <code>{tidytuesday201942}</code> <span class="citation">(Fay <a href="#ref-R-tidytuesday201942" role="doc-biblioref">2020</a><a href="#ref-R-tidytuesday201942" role="doc-biblioref">l</a>)</span> application available at <a href="https://connect.thinkr.fr/tidytuesday201942/">connect.thinkr.fr/tidytuesday201942</a>
 By itself, this application is not self-evident: you need to have a series of background knowledge before understanding what this application was designed for.
 For example, you might need to have a vague sense of what <code>tidytuesday</code> is.
 If you do not, you will have to read the home text, which will help you understand what this is.
@@ -1121,7 +1122,7 @@ It also comes with tools for Java and JavaScript, and notably with a NodeJS modu
 <p>Fay, Colin. 2020g. <em>Hexmake: Hex Stickers Maker</em>. <a href="https://github.com/colinfay/hexmake">https://github.com/colinfay/hexmake</a>.</p>
 </div>
 <div id="ref-R-tidytuesday201942">
-<p>Fay, Colin. 2020k. <em>Tidytuesday201942: A Golem App for Tidy Tuesday</em>. <a href="http://www.github.com/ColinFay/tidytuesday201942">http://www.github.com/ColinFay/tidytuesday201942</a>.</p>
+<p>Fay, Colin. 2020l. <em>Tidytuesday201942: A Golem App for Tidy Tuesday</em>. <a href="http://www.github.com/ColinFay/tidytuesday201942">http://www.github.com/ColinFay/tidytuesday201942</a>.</p>
 </div>
 <div id="ref-R-viridis">
 <p>Garnier, Simon. 2018. <em>Viridis: Default Color Maps from ’Matplotlib’</em>. <a href="https://CRAN.R-project.org/package=viridis">https://CRAN.R-project.org/package=viridis</a>.</p>
