--- a/wip/successfulshinyapp.html
+++ b/wip/successfulshinyapp.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-05-07" />
+<meta name="date" content="2020-05-11" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -413,11 +413,12 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="18.4" data-path="optimjs.html"><a href="optimjs.html#about-golem-js-functions"><i class="fa fa-check"></i><b>18.4</b> About <code>{golem}</code> js functions</a><ul>
 <li class="chapter" data-level="18.4.1" data-path="optimjs.html"><a href="optimjs.html#goleminvoke_js"><i class="fa fa-check"></i><b>18.4.1</b> <code>golem::invoke_js()</code></a></li>
 </ul></li>
-<li class="chapter" data-level="18.5" data-path="optimjs.html"><a href="optimjs.html#learn-more-about-javascript"><i class="fa fa-check"></i><b>18.5</b> Learn more about JavaScript</a><ul>
-<li class="chapter" data-level="18.5.1" data-path="optimjs.html"><a href="optimjs.html#shiny-javascript"><i class="fa fa-check"></i><b>18.5.1</b> Shiny &amp; JavaScript</a></li>
-<li class="chapter" data-level="18.5.2" data-path="optimjs.html"><a href="optimjs.html#javascript-basics"><i class="fa fa-check"></i><b>18.5.2</b> JavaScript basics</a></li>
-<li class="chapter" data-level="18.5.3" data-path="optimjs.html"><a href="optimjs.html#jquery"><i class="fa fa-check"></i><b>18.5.3</b> jQuery</a></li>
-<li class="chapter" data-level="18.5.4" data-path="optimjs.html"><a href="optimjs.html#intermediate-advanced-javascript"><i class="fa fa-check"></i><b>18.5.4</b> Intermediate / advanced JavaScript</a></li>
+<li class="chapter" data-level="18.5" data-path="optimjs.html"><a href="optimjs.html#one-last-thing-api-calls"><i class="fa fa-check"></i><b>18.5</b> One Last Thing: API calls</a></li>
+<li class="chapter" data-level="18.6" data-path="optimjs.html"><a href="optimjs.html#learn-more-about-javascript"><i class="fa fa-check"></i><b>18.6</b> Learn more about JavaScript</a><ul>
+<li class="chapter" data-level="18.6.1" data-path="optimjs.html"><a href="optimjs.html#shiny-javascript"><i class="fa fa-check"></i><b>18.6.1</b> Shiny &amp; JavaScript</a></li>
+<li class="chapter" data-level="18.6.2" data-path="optimjs.html"><a href="optimjs.html#javascript-basics"><i class="fa fa-check"></i><b>18.6.2</b> JavaScript basics</a></li>
+<li class="chapter" data-level="18.6.3" data-path="optimjs.html"><a href="optimjs.html#jquery"><i class="fa fa-check"></i><b>18.6.3</b> jQuery</a></li>
+<li class="chapter" data-level="18.6.4" data-path="optimjs.html"><a href="optimjs.html#intermediate-advanced-javascript"><i class="fa fa-check"></i><b>18.6.4</b> Intermediate / advanced JavaScript</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
@@ -461,7 +462,7 @@ And that is probably one of the main reason why this package has become so succe
 <p>The first version of <code>{shiny}</code> was published in 2012.
 Since then, it has been one of the top project of the RStudio team.
 At the time of writing these lines (April 2020), there are more than 4700 commits in the master branch of the GitHub repository, made by 46 contributors.
-It is now downloaded around 400K times a month, according to <a href="https://cranlogs.r-pkg.org/badges/shiny">cranlogs</a>, and has 734 reverse dependencies (i.e packages that depend on it), according to <code>revdep("shiny")</code> from <code>{devtools}</code> <span class="citation">(Wickham, Hester, and Chang <a href="#ref-R-devtools" role="doc-biblioref">2020</a>)</span>.</p>
+It is now downloaded around 400K times a month, according to <a href="https://cranlogs.r-pkg.org/badges/shiny">cranlogs</a>, and has 739 reverse dependencies (i.e packages that depend on it), according to <code>revdep("shiny")</code> from <code>{devtools}</code> <span class="citation">(Wickham, Hester, and Chang <a href="#ref-R-devtools" role="doc-biblioref">2020</a>)</span>.</p>
 <p>If you are very new to Shiny, this book might feel a little bit overwhelming: we will be discussing some advanced <code>{shiny}</code> and software engineering methods, best practices and structural idea for sending Shiny applications to production.
 This books relies on the assumption that you already know how to build basic Shiny applications, and that you want to push your Shiny skills to the next level: in other words, you are ready to move from the Proof of Concept to the production-grade application.
 If you are very new to Shiny, we suggest you start with the <a href="https://mastering-shiny.org/">Mastering Shiny book</a> before reading the present book.</p>
